<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#726B6B"
        android:fillViewport="true"
        tools:context=".HomeActivity">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="-131dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:text="@string/Welcome_back"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.308"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <Button
                android:id="@+id/lostButton"
                android:layout_width="273dp"
                android:layout_height="61dp"
                android:text="@string/lost_item_button"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView"
                app:layout_constraintBottom_toTopOf="@id/foundButton"/>

            <Button
                android:id="@+id/foundButton"
                android:layout_width="278dp"
                android:layout_height="59dp"
                android:background="@drawable/rounded_button"
                android:text="@string/found_item_button"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lostButton"
                app:layout_constraintBottom_toTopOf="@id/ongoingButton"/>

            <Button
                android:id="@+id/ongoingButton"
                android:layout_width="278dp"
                android:layout_height="59dp"
                android:text="@string/ongoing_applications_button"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/foundButton"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal">

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/black"
            android:text="Settings"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/profileButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:text="Profile"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>